fixed maps with room numbers

--- a/FloorOne.htm
+++ b/FloorOne.htm
@@ -11,7 +11,7 @@
     <h1>School Map</h1>
     <h3>Floor One</h3>
     <p><a href="HomeSecondFloor.htm"><button>2nd Floor</button></a> <a href="FloorThree.htm"><button>3rd Floor</button></a></p>
-    <div id="firstFloorDiv"><center><img id="img_ID"  src="transFirstFloor.png" alt="placeholder" usemap="#image-map"></center></div>
+    <div id="firstFloorDiv"><center><img id="img_ID"  src="FirstFloor.png" alt="placeholder" usemap="#image-map"></center></div>
     <br/>
     <br/>
     <div id="logoDiv"><center><img src="logo.png" alt="logo"></center></div>
