--- a/FloorThree.htm
+++ b/FloorThree.htm
@@ -11,7 +11,7 @@
     <h1>School Map</h1>
     <h3>Floor Three</h3>
     <p><a href="FloorOne.htm"><button>1st Floor</button></a> <a href="HomeSecondFloor.htm"><button>2nd Floor</button></a></p>
-    <div id="firstFloorDiv"><center><img id="img_ID"  src="3rdFloorTransWhite.png" alt="placeholder" usemap="#image-map"></center></div>
+    <div id="firstFloorDiv"><center><img id="img_ID"  src="ThirdFloor.png" alt="placeholder" usemap="#image-map"></center></div>
     <br/>
     <br/>
     <div id="logoDiv"><center><img src="logo.png" alt="logo"></center></div>
