--- a/HomeSecondFloor.htm
+++ b/HomeSecondFloor.htm
@@ -10,7 +10,7 @@
     <h1>School Map</h1>
     <h3>Floor Two</h3>
     <p><a href="FloorOne.htm"><button>1st Floor</button></a> <a href="FloorThree.htm"><button>3rd Floor</button></a></p>    
-    <div id="firstFloorDiv"><center><img id="img_ID"  src="2ndFloorTransWhite.png" alt="placeholder" usemap="#image-map"></center></div>
+    <div id="firstFloorDiv"><center><img id="img_ID"  src="SecondFloor.png" alt="placeholder" usemap="#image-map"></center></div>
     <br/>
     <br/>
     <div id="logoDiv"><center><img src="logo.png" alt="logo"></center></div>
